--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "server_start": "nodejs server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
