--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@turf/turf": "^5.1.6",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "leaflet": "^1.7.1",
-    "turf": "^3.0.14"
+    "leaflet": "^1.7.1"
   }
 }
