--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/tnier01/SafeRouteToSchool#readme",
   "dependencies": {
-    "chart.js": "^2.9.4",
     "@turf/turf": "^5.1.6",
+    "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
+    "corejs-typeahead": "^1.3.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "leaflet": "^1.7.1"
