--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "homepage": "https://github.com/tnier01/SafeRouteToSchool#readme",
   "dependencies": {
-    "chart.js": "^2.9.4",
     "@turf/turf": "^5.1.6",
+    "chart.js": "^2.9.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "leaflet": "^1.7.1"
+    "leaflet": "^1.7.1",
+    "leaflet.pattern": "github:teastman/Leaflet.pattern"
   }
 }
