--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "corejs-typeahead": "^1.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "leaflet": "^1.7.1"
+    "leaflet": "^1.7.1",
+    "morgan": "^1.10.0"
   }
 }
