--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "corejs-typeahead": "^1.3.1",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "leaflet": "^1.7.1"
+    "leaflet": "^1.7.1",
+    "leaflet.awesome-markers": "^2.0.5"
   }
 }
